--- a/style.css
+++ b/style.css
@@ -1,64 +1,61 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Lato', sans-serif;
-  background-color: #2e5a88;
+  background-color: rgba(155, 89, 182, 0.7);
+  font-family: 'Open Sans', sans-serif;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
   margin: 0;
 }
 
-.container {
-  border: 2px solid #eee;
-  border-radius: 10px;
-  background-color: rgba(58, 194, 204, 0.842);
-  width: 335px;
-  height: 550px;
+.phone {
   position: relative;
   overflow: hidden;
+  border: 3px solid #eee;
+  border-radius: 15px;
+  height: 600px;
+  width: 340px;
 }
 
-.images {
-  object-fit: cover;
+.phone .content {
   opacity: 0;
-  width: 100%;
+  object-fit: cover;
   position: absolute;
-  height: calc(100% - 60px);
   top: 0;
   left: 0;
+  height: calc(100% - 60px);
+  width: 100%;
   transition: opacity 0.4s ease;
 }
 
-.images.show {
+.phone .content.show {
   opacity: 1;
 }
 
-.tabs {
-  background-color: rgb(184, 73, 73);
+nav {
   position: absolute;
   bottom: 0;
-  right: 0;
   left: 0;
-  margin-top: -4px;
+  margin-top: -5px;
   width: 100%;
 }
 
-.tabs ul {
+nav ul {
   background-color: #fff;
   display: flex;
+  list-style-type: none;
   padding: 0;
   margin: 0;
   height: 60px;
 }
 
-.tabs ul li {
-  list-style-type: none;
+nav li {
   color: #777;
   cursor: pointer;
   flex: 1;
@@ -66,12 +63,12 @@ body {
   text-align: center;
 }
 
-.tabs ul li p {
-  font-size: 14px;
+nav ul li p {
+  font-size: 12px;
   margin: 2px 0;
 }
 
-.tabs ul li:hover,
-.tabs ul li.active {
+nav ul li:hover,
+nav ul li.active {
   color: #8e44ad;
 }
